# split_3d

./: .gitignore  INSTRUCTIONS_RU.md  README.md  grid_split.py  pyproject.toml  requirements.txt
grid_split/: cli.py  core.py  gui.py  preview.py
